package proxyPattern;

public interface IMoveable {
    void move();
}

